Update on table data